endpoint retrieve secret value
